bugfix: overflow: hidden for wide pictures on product page #EL-6

--- a/app/assets/stylesheets/product.scss.css
+++ b/app/assets/stylesheets/product.scss.css
@@ -1,7 +1,9 @@
 #main-image div img {
     height: 476px;
 }
-
+#main-image div {
+    overflow: hidden;
+}
 .product-price {
     font-family: Poppins;
     font-size: 16px;
